--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,38 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import styles from './index.module.css';
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+		<h1>Zaloguj się</h1>
+
+			<form class={styles.loginform}>
+				<label for="email">Email</label>
+				<input type="email" id="email" name="email" required />
+
+				<label for="password">Hasło</label>
+				<input type="password" id="password" name="password" required />
+
+				<button type="submit">Zaloguj</button>
+
+				<div class={styles.links}>
+				<a onclick="alert('Work In Progress')">Zapomniałeś hasła?</a>
+				<a onclick="alert('Work In Progress')">Zarejestruj</a>
+				</div>
+			</form>
+
+		<div class="content">
+			<h1>Duzy naglowek</h1>
+
+			<h2>mniejszy naglowek</h2>
+			<p>Lorem ipsum terfere.</p>
+
+			<h2>mniejszy naglowek</h2>
+			<p>Lorem ipsum terfere.</p>
+
+			<h2>mniejszy naglowek</h2>
+			<p>Lorem ipsum terfere.</p>
+		</div>
 </Layout>
