--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,21 @@
 @import "tailwindcss";
+h1 {
+  font-size: 2rem;
+  color: #333;
+  margin-bottom: 1rem;
+  text-decoration: underline;
+}
+
+h2 {
+  font-size: 1.5rem;
+  color: #333;
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #333;
+  margin-bottom: 1rem;
+}
