--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,45 +1,17 @@
 ---
-import '../styles/global.css';
 const { title } = Astro.props;
-
-const navItems = [
-  { label: 'Send', path: '/' },
-  { label: 'History', path: '/History' },
-  { label: 'Options', path: '/Options' },
-];
+import Sidebar from "../components/Sidebar.astro";
 ---
 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>{title}</title>
-
-    
   </head>
-  <body class="min-h-screen m-0">
-    <div class="flex min-h-screen">
-      <!-- Sidebar -->
-      <aside class="w-1/6 bg-blue-700">
-        <nav>
-			<ul class="space-y-2 list-none">
-  				{navItems.map((item) => (
-    			<li>
-      				<button
-        			onclick={`location.href='${item.path}'`}
-        			class="block w-full text-center p-2 hover:bg-blue-900 text-white"
-      				>
-       				{item.label}
-      				</button>
-    			</li>
-  				))}
-			</ul>
-        </nav>
-      </aside>
-
-      <!-- Main content -->
-      <main class="flex-1 p-6">
-        <slot />
-      </main>
-    </div>
+  <body class="min-h-screen m-0 flex">
+    <Sidebar />
+    <main class="flex-1 p-6">
+      <slot />
+    </main>
   </body>
 </html>
