--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,33 +4,32 @@ import styles from '../styles/index.module.css';
 ---
 
 <Layout>
-		<h1>Zaloguj się</h1>
+	<form class={styles.content}>
+		<h1>Sign In</h1>
+	</form>
+			
+	<form class={styles.loginform}>
+		<label for="email">Email</label>
+		<input type="email" id="email" name="email" required />
 
-			<form class={styles.loginform}>
-				<label for="email">Email</label>
-				<input type="email" id="email" name="email" required />
+		<label for="password">Password</label>
+		<input type="password" id="password" name="password" required />
 
-				<label for="password">Hasło</label>
-				<input type="password" id="password" name="password" required />
+		<button type="submit">Sign In</button>
 
-				<button type="submit">Zaloguj</button>
-
-				<div class={styles.links}>
-				<a onclick="alert('Work In Progress')">Zapomniałeś hasła?</a>
-				<a onclick="alert('Work In Progress')">Zarejestruj</a>
-				</div>
-			</form>
-
-		<div class="content">
-			<h1>Duzy naglowek</h1>
-
-			<h2>mniejszy naglowek</h2>
-			<p>Lorem ipsum terfere.</p>
-
-			<h2>mniejszy naglowek</h2>
-			<p>Lorem ipsum terfere.</p>
-
-			<h2>mniejszy naglowek</h2>
-			<p>Lorem ipsum terfere.</p>
+		<div class={styles.links}>
+			<a onclick="alert('Work In Progress')">Forgot password?</a>
+			<a onclick="alert('Work In Progress')">Sign up</a>
 		</div>
+	</form>
+
+	<div class={styles.content}>
+		<h1>Big headline</h1>
+		<h2>smaller headline</h2>
+		<p>Lorem ipsum terfere.</p>
+		<h2>smaller headline</h2>
+		<p>Lorem ipsum terfere.</p>
+		<h2>smaller headline</h2>
+		<p>Lorem ipsum terfere.</p>
+	</div>
 </Layout>
