solid refactor of login page and Oauth2 added

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ import Sidebar from "../components/Sidebar.astro";
   </head>
   <body class="min-h-screen m-0 flex">
     <Sidebar />
-    <main class="flex-1 p-6">
+    <main class="flex-1">
       <slot />
     </main>
   </body>
