--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,9 +1,8 @@
-
 .loginform {
-  background-color: var(--primary-color);
+  background-color: white;
   padding: 2rem;
   border-radius: 8px;
-  box-shadow: 0 2px 10px var(--contrast);
+  box-shadow: 0 2px 10px black;
   width: 100%;
   max-width: 600px;
   display: flex;
@@ -17,24 +16,8 @@
   font-weight: bold;
 }
 
-.loginform input {
-  padding: 0.7rem;
-  border: none;
-  border-radius: 5px;
-  background-color: var(--secondary);
-  font-size: 1rem;
-  color: var(--primary-color);
-}
-
 .loginform button {
   margin-top: 1.5rem;
-  padding: 0.7rem;
-  border: none;
-  border-radius: 5px;
-  background-color: var(--secondary);
-  font-size: 1rem;
-  color: var(--primary-color);
-  cursor: pointer;
 }
 
 .loginform .links {
@@ -46,21 +29,21 @@
 }
 
 .loginform .links a {
-  color: var(--contrast);
+  color: black;
   text-decoration: underline;
   cursor: pointer;
 }
 
 .content h1 {
   font-size: 2rem;
-  color:  var(--contrast);
+  color: black;
   margin-bottom: 1rem;
   text-decoration: underline;
 }
 
 .content h2 {
   font-size: 1.5rem;
-  color: var(--contrast);
+  color: black;
   margin-top: 2rem;
   margin-bottom: 0.5rem;
 }
@@ -68,6 +51,6 @@
 .content p {
   font-size: 1rem;
   line-height: 1.6;
-  color: var(--contrast);
+  color: black;
   margin-bottom: 1rem;
 }
