--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,21 @@ button:hover {
   transform: translateY(-1px) scale(1.01);
 }
 
+.sidebar-btn {
+  background: none;
+  background-color: transparent;
+  color: white;
+  box-shadow: none;
+  border-radius: 8px;
+  font-weight: 700;
+  transition: transform 0.2s;
+}
+
+.sidebar-btn:hover {
+  box-shadow: none;
+  transform: translateY(-2px) scale(1.02);
+}
+
 input {
   padding: 0.6rem 1.2rem;
   border-radius: 10px;
