--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,37 +13,26 @@
 }
 
 button {
-  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--main-blue);
+  font-weight: 600;
+  color: white;
+  gap: calc(var(--spacing) * 2);
+  padding: calc(var(--spacing) * 3) calc(var(--spacing) * 4);
   border: none;
   border-radius: 15px;
-  background-color: var(--main-blue);
   font-size: 1.1rem;
-  color: white;
   cursor: pointer;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  font-weight: 600;
   transition: background-color 0.3s, bix-shadow 0.3s, transform 0.2s;
 }
 
 button:hover {
-  background-color: var(--light-blue);
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.18);
+  background-color: var(--light-blue);
   transform: translateY(-1px) scale(1.01);
-}
-
-.sidebar-btn {
-  background: none;
-  background-color: transparent;
-  color: white;
-  box-shadow: none;
-  border-radius: 8px;
-  font-weight: 700;
-  transition: transform 0.2s;
-}
-
-.sidebar-btn:hover {
-  box-shadow: none;
-  transform: translateY(-2px) scale(1.02);
 }
 
 input {
@@ -61,4 +50,27 @@ input {
 input:focus {
   box-shadow: 0 4px 16px rgba(70, 130, 255, 0.18);
   border: 2px solid var(--light-blue);
+}
+
+a {
+  color: var(--main-blue);
+  text-decoration: none;
+  font-weight: 600;
+  cursor: pointer;
+  position: relative;
+}
+
+a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 0;
+  height: 2px;
+  background: var(--main-blue);
+  transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+a:hover::after {
+  width: 100%;
 }
