Theme: padding and gap by Tailwind

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -32,7 +32,7 @@ const navItems = [
           <li class="">
             <button
               onclick={`location.href='${item.path}'`}
-              class="sidebar-btn text-lg w-full flex items-end justify-end"
+              class="sidebar-btn text-lg w-full px-4 py-3 gap-2"
             >
               <Icon class="w-5 h-5" />
               {item.label}
