--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import styles from '../styles/index.module.css';
 		<label for="password">Password</label>
 		<input type="password" id="password" name="password" required />
 
-		<button type="submit">Sign In</button>
+		<button class="px-4 py-3 gap-2" type="submit">Sign In</button>
 
 		<div class={styles.links}>
 			<a onclick="alert('Work In Progress')">Forgot password?</a>
