--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,8 +1,8 @@
 .loginform {
-  background-color: white;
+  background-color: var(--main-background);
   padding: 2rem;
   border-radius: 8px;
-  box-shadow: 0 2px 10px black;
+  box-shadow: 0 0px 8px var(--shadow-btn);
   width: 100%;
   max-width: 600px;
   display: flex;
@@ -14,6 +14,7 @@
   margin-top: 1rem;
   margin-bottom: 0.3rem;
   font-weight: bold;
+  color: var(--main-text);
 }
 
 .loginform button {
@@ -34,14 +35,14 @@
 
 .content h1 {
   font-size: 2rem;
-  color: black;
+  color: var(--main-text);
   margin-bottom: 1rem;
   text-decoration: underline;
 }
 
 .content h2 {
   font-size: 1.5rem;
-  color: black;
+  color: var(--main-text);
   margin-top: 2rem;
   margin-bottom: 0.5rem;
 }
@@ -49,6 +50,6 @@
 .content p {
   font-size: 1rem;
   line-height: 1.6;
-  color: black;
+  color: var(--main-text);
   margin-bottom: 1rem;
 }
