--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,6 +1,12 @@
 .sidebar-btn {
   box-shadow: none;
   font-weight: 700;
+  background-color: transparent;
+}
+
+aside {
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 720 1280" preserveAspectRatio="none"><defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1"><stop offset="0" stop-color="hsl(221,83%,46%)"/><stop offset="1" stop-color="hsl(221,83%,53%)"/></linearGradient></defs><rect width="100%" height="100%" fill="url(%23g)"/><g opacity=".22"><polygon fill="hsl(221,83%,95%)" points="-200,250 80,-200 240,-200 -40,250"/><polygon fill="hsl(221,83%,90%)" points="-120,1280 160,830 320,830 40,1280"/><polygon fill="hsl(221,83%,88%)" points="280,1280 560,830 720,830 440,1280"/><polygon fill="hsl(221,83%,92%)" points="360,250 640,-200 800,-200 520,250"/></g><g opacity=".18"><polygon fill="hsl(221,83%,32%)" points="0,560 300,160 440,160 140,560"/><polygon fill="hsl(221,83%,28%)" points="200,980 500,580 640,580 340,980"/></g></svg>')
+    no-repeat center/cover;
 }
 
 .sidebar-btn:hover {
